--- a/FE/src/styles/_toDoPage.scss
+++ b/FE/src/styles/_toDoPage.scss
@@ -34,6 +34,7 @@
             display: flex;
             align-items: center;
             position: relative;
+            cursor: pointer;
             gap: 20px;
             .header-avatar {
                 height: 60px;
@@ -55,8 +56,8 @@
             .header-dropdown {
                 display: none;
                 position: absolute;
-                width: 140px;
-                left: 30px;
+                width: 170px;
+                left: -10px;
                 top: 60px;
                 z-index: 999;
                 background: #F3F3F3;
@@ -77,10 +78,19 @@
                     background: burlywood;
                     color: black;
                 }
+                .dropdown-title {
+                    font-size: 16px;
+                    text-align: center;
+                    padding-bottom: 10px;
+                }
+                .dropdown-des {
+                    font-size: 13px;
+                    padding-bottom: 20px;
+                    text-align: center;
+                }
             }
         }
         .header-right:hover .header-dropdown {
-            height: 175px;
             display: block;
         }
 	}
@@ -99,6 +109,22 @@
             border-bottom: 3px solid #142668;
         }
     }
+    .wrap-button {
+        display: flex;
+        justify-content: flex-end;
+        button {
+            cursor: pointer;
+            margin-right: 40px;
+            background: linear-gradient(96.28deg, rgba(255, 255, 255, 0.6) 0.71%, rgba(255, 255, 255, 0.1) 100%);
+            border: 1px solid #FFFFFF;
+            border-radius: 10px;
+            p {
+            font-weight: 700;
+            font-size: 16px;
+            padding: 10px 20px;
+            }
+        }
+    }
     .page-container {
         padding-top: 20px;
         max-width: 1750px;
@@ -110,7 +136,7 @@
             backdrop-filter: blur(60px);
             border-radius: 10px;
             box-sizing: border-box;
-            padding: 25px;
+            padding: 20px;
             .container-card{
                 height: calc(100% - 20px);
                 overflow-y: auto;
@@ -132,6 +158,7 @@
                         }
                         .item-icon {
                             display: flex;
+                            cursor: pointer;
                             gap: 15px;
                             .item-wrap {
                                 width: 27px;
