--- a/FE/src/styles/app.scss
+++ b/FE/src/styles/app.scss
@@ -5,7 +5,7 @@ body {
 	font-family: 'Mulish', sans-serif;
 	font-weight: 400;
 }
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6,p {
 	margin: 0;
 	font-family: 'Mulish', sans-serif;
 	color: #142668;
@@ -15,8 +15,6 @@ h1, h2, h3, h4, h5, h6 {
 a {
 	text-decoration: none;
 	margin: 0px;
-}
-a:hover {
 	cursor: pointer;
 }
 ul li {
@@ -26,6 +24,7 @@ ul li {
 button {
 	padding: 0;
 	border: none;
+	cursor: pointer;
 }
 .image-cover {
 	object-fit: cover;
